frontend/src/components/LandingPage.css
.landing-page {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
  text-align: center;
  background-color: #F7F7F7;
}

.landing-page h1 {
  font-size: 3em;
  margin-bottom: 20px;
  color: #000000;
}

.landing-page p {
  font-size: 1.5em;
  color: #854836;
  margin-bottom: 30px;
}

.get-started-button {
  padding: 15px 30px;
  font-size: 1.2em;
  background-color: #FFB22C;
  color: #000000;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.get-started-button:hover {
  background-color: #854836;
}

.features {
  display: flex;
  justify-content: flex-start;
  margin-top: 50px;
  margin-right: 10px;
  width: 100%;
  padding: 0 50px;
}

.feature {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  width: 30%;
}

.feature i {
  font-size: 4em;
  margin-bottom: 15px;
  color: #4E1F00;
}

.feature h3 {
  font-size: 1.7em;
  margin-bottom: 10px;
  color: #000000;
}

.feature p {
  font-size: 1.2em;
  color: #854836;
}

.features-section {
  background-color: #D6CFB4;
  padding: 50px 0;
  width: 100%;
}

.knewave-regular {
  font-family: "Knewave", system-ui;
  font-weight: 400;
  font-style: normal;
}

